MDS RT form v1.0.1 deploy to DEV

--- a/mds_index.html
+++ b/mds_index.html
@@ -155,16 +155,16 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html">Company Enrolment -External (Apr 26, 2019, V1.0.1)</a>
+                        <a href="./mds/company/en/index.html#main">Company Enrolment -External (Apr 26, 2019, V1.0.1)</a>
                     </div>
                     <div class="row">
                         <a href="./mds/dossier/en/index.html">Dossier Enrolment -External (Feb 15, 2019, V1.0.0)</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html">Application Information Enrolment -External (May 02, 2019, V1.0.2)</a>
+                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Enrolment -External (May 02, 2019, V1.0.2)</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html">Transaction Enrolment External (Feb 15, 2019, V1.0.0)</a>
+                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (May 10, 2019, V1.0.1)</a>
                     </div>
                 </div>
                 <div>
@@ -172,7 +172,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/internal/company/en/index_internal.html">Company Enrolment -Internal (Apr 26, 2019, V1.0.1) </a>
+                        <a href="./mds/internal/company/en/index_internal.html#main">Company Enrolment -Internal (Apr 26, 2019, V1.0.1) </a>
                     </div>
                     <div class="row">
                         <a href="./mds/internal/dossier/en/index_internal.html">Dossier Enrolment Internal (Feb 15, 2019, V1.0.0)</a>
@@ -183,7 +183,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: April 26, 2019</dt>
+                    <dt>Date modified: May 10, 2019</dt>
                 </dl>
             </div>
         </div>
