--- a/mds_index.html
+++ b/mds_index.html
@@ -155,16 +155,16 @@
                         <h2> REP Form Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html">Company Enrolment</a>
+                        <a href="./mds/company/en/index.html#main">Company Enrolment</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/dossier/en/index.html">Dossier Enrolment</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/medical-device-dossier-template.html">Dossier Enrolment</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html">Application Information</a>
+                        <a href="./mds/applicationInfo/en/index.html#main">Application Information</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html">Regulatory Transaction</a>
+                        <a href="./mds/transaction/en/index.html#main">Regulatory Transaction</a>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: February 28, 2019</dt>
+                    <dt>Date modified: May 22, 2019</dt>
                 </dl>
             </div>
         </div>
