CSP form - deploy old version back to Prod internal

--- a/index-fr.html
+++ b/index-fr.html
@@ -182,7 +182,13 @@
                     <h2>Internal User (i.e. HPFB) Links</h2>
                 </div>
                 <div class="row">
-                    <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (Sept 25,2017) </a>
+                    <a href="./certificate/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (à compter du 15 mai 2019) (10 mai 2019) </a>
+                </div>
+                <div class="row">
+                    <a href="./oldcertificate/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (du 22 septembre 2018 jusqu’à le 14 mai 2019) (25 septembre 2017) </a>
+                </div>
+                <div class="row">
+                    <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (25 septembre 2017) </a>
                 </div>
             </div>
         </div>
