PB CO and RT forms v3.0.1 - integration test - deploy to DEV - bug fix

--- a/wet4027/transaction/transactionEXT-fr.html
+++ b/wet4027/transaction/transactionEXT-fr.html
@@ -12,7 +12,7 @@
     <meta property="dcterms.title" content="Modèle de transaction réglementaire: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-05-30">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-05-31">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -64,7 +64,7 @@
         }],
         showPreContent: false,
         breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr.html"},
-            {title: "Santé Canada", href: "https://www.canada.ca/fr/health-canada.html"},
+            {title: "Santé Canada", href: "https://www.canada.ca/fr/sante-canada.html"},
             {title: "Formulaires pour le Processus d'inscription réglementaire", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}]
     });
 </script>
@@ -115,7 +115,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-05-30",
+            dateModified: "2019-05-31",
             showPostContent: true,
             showFeedback:true,
             showShare:true
@@ -158,7 +158,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-fr_20190530_1107.min.js"></script>
+<script src="app/scripts/transactionAppEXT-fr_20190531_1612.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
