--- a/wet4027/drugProduct/drugProductEXT-en.html
+++ b/wet4027/drugProduct/drugProductEXT-en.html
@@ -12,7 +12,7 @@
     <meta property="dcterms.title" content="Product Information Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-04-29">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-05-31">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -59,7 +59,7 @@
         search: true,
         lngLinks: [{
             lang: "fr",
-            href: "",
+            href: "drugProductEXT-fr.html",
             text: "Français"
         }],
         showPreContent: false,
@@ -76,7 +76,7 @@
         <div class="col-md-12">
             <h1 property="name" id="wb-cont">Product Information Template: Regulatory Enrolment Process (REP)</h1>
             <p class="pagetag">
-                <strong>From <a href="http://www.healthycanadians.gc.ca/department-ministere/hc-sc-eng.php?_ga=1.203751760.1566644155.1449063473">Health Canada</a></strong>
+                <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
         </div>
         <div class=" col-md-12 module-table-contents">
@@ -116,7 +116,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-04-29",
+            dateModified: "2019-05-31",
             showPostContent: true,
             showFeedback:true,
             showShare:true
@@ -159,7 +159,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-en_20190429_1437.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20190531_1631.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
