--- a/wet4027/drugProduct/drugProductEXT-fr.html
+++ b/wet4027/drugProduct/drugProductEXT-fr.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" data-th-lang="#{lang}" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="fr" data-th-lang="#{lang}" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
+    <meta name='description' content="Regulatory Enrolment Process Forms"/>
+    <meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/>
+    <meta name="author" content="Santé Canada"/>
+    <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca">
+    <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
+    <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-05-31">
+    <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
+    <meta property="dcterms.language" title="ISO639-2/T" content="fra">
+
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
          wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>fr_Product Information Template: Regulatory Enrolment Process - Canada.ca</title>
+    <title>Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca</title>
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <!-- Additional analytics, if required. -->
     <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
     <!-- Load closure template scripts -->
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js" integrity="sha384-32eoaED5PWLqUcm/SmCNYkjyLGbZouGKcA7SqNkg4pw/HO5GQvYe41sFH2Gurff2" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js" integrity="sha384-IJEq7xXwCsGhugLUYN0xdUfIccLGc7JpDl6yPR4oqiMSmLhxGX6BaGr0crKCm9eA" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js" integrity="sha384-XdgAwBcyyhJsRyTBhx1UQIgSO/8RlRZMoMQBrHLEKyznnKWPSd+r8VT1ri/ihlri" crossorigin="anonymous"></script>
     <noscript>
         <!-- Write closure fall-back static file -->
-        <!--[if gte IE 9 | !IE ]><!-->
-        <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/assets/favicon.ico" rel="icon" type="image/x-icon">
-        <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/css/theme.min.css">
-        <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/cdtsfixes.css">
-        <!-- Are you using the application templates? If so add the following CSS file -->
-        <!-- <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/cdtsapps.css">-->
-        <!--<![endif]-->
-        <!--[if lt IE 9]>
-        <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/assets/favicon.ico" rel="shortcut icon" />
-        <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/css/ie8-theme.min.css" />
-        <![endif]-->
-        <!--[if lte IE 9]><![endif]-->
-        <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/css/noscript.min.css" />
-        <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/cdtsnoscript.css" />
+        <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
     </noscript>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" integrity="sha384-+2PnMSZobRWHUFuaarq2tDCtf7FFSZpeMRVRe7C0l8bRZMBTjUinKl1AuYRON/A2" crossorigin="anonymous"/>
+    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="app/styles/rep.css">
+    <link rel="stylesheet" href="app/styles/select.min.css">
+    <link rel="stylesheet" href="app/styles/select2.min.css">
+    <!-- endinject -->
 
     <!-- Write closure template -->
     <script type="text/javascript">
@@ -39,27 +43,29 @@
             cdnEnv: "prod" //jqueryEnv:false
         }));
     </script>
-    <meta name='description' content="REP Forms"/>
 </head>
 
-<body vocab="http://schema.org/" typeof="WebPage">
+<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;">
 <div id="def-top">
     <!-- Write closure fall-back static file -->
+    <!-- ./wet_4_0_27/cdts/static/top-fr.html-->
+    <!--# include virtual="/rep-dev/cdts/static/top-fr.html"-->
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
     var defTop = document.getElementById("def-top");
-    defTop.outerHTML = wet.builder.appTop({
+    defTop.outerHTML = wet.builder.top({
         cdnEnv: "prod",
         search: true,
         lngLinks: [{
-            lang: "fr",
-            href: "",
-            text: "Français"
+            lang: "en",
+            href: "drugProductEXT-en.html",
+            text: "English"
         }],
-        showPreContent: true,
-        breadcrumbs: [{title: 'Home', href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"},
-            {title: 'Health Canada', href: 'https://www.canada.ca/en/health-canada.html'}]
+        showPreContent: false,
+        breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr.html"},
+            {title: "Santé Canada", href: "https://www.canada.ca/fr/sante-canada.html"},
+            {title: "Formulaires pour le Processus d'inscription réglementaire", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}]
     });
 </script>
 
@@ -68,25 +74,41 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">fr_Product Information Template: Regulatory Enrolment Process (REP)</h1>
+            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire</h1>
             <p class="pagetag">
-                <strong>From <a href="http://www.healthycanadians.gc.ca/department-ministere/hc-sc-eng.php?_ga=1.203751760.1566644155.1449063473">Health Canada</a></strong>
+                <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
         </div>
+        <div class=" col-md-12 module-table-contents">
+            <section class="panel panel-default">
+                <header class="panel-heading clearfix">
+                    <h2  class="panel-title">Table de matières</h2>
+                </header>
+                <div class="panel-body">
+                    <ul>
+                        <li><a class="ui-link" href="#privacy">Énoncé de confidentialité</a></li>
+                        <li><a class="ui-link" href="#instructions">Instructions</a></li>
+                        <li><a class="ui-link" href="#main">Formulaire</a></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+
     </div>
     <!-- the main content -->
-        <!-- inject:mainContent-->
-        <div id="app-root" data-ng-app="drugProductApp" data-ng-controller="MainController as ctrl">
+    <!-- inject:mainContent-->
+    <div id="app-root" data-ng-app="drugProductApp" data-ng-controller="MainController as ctrl">
     <cmp-drug-product form-type="{{ctrl.formType}}"></cmp-drug-product>
 </div>
 
-        <!-- endinject-->
+    <!-- endinject-->
     <!-- end main content -->
 
     <!--content ends here -->
-
     <div id="def-preFooter">
         <!-- Write closure fall-back static file -->
+        <!-- ./wet_4_0_27/cdts/static/preFooter-fr.html-->
+        <!--# include virtual="/rep-dev/cdts/static/preFooter-fr.html"-->
     </div>
 
     <!-- Write closure template -->
@@ -94,7 +116,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-04-29",
+            dateModified: "2019-05-31",
             showPostContent: true,
             showFeedback:true,
             showShare:true
@@ -103,6 +125,8 @@
 </main>
 <div id="def-footer">
     <!-- Write closure fall-back static file -->
+    <!-- ./wet_4_0_27/cdts/static/footer-fr.html-->
+    <!--# include virtual="/rep-dev/cdts/static/footer-fr.html"-->
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
@@ -135,7 +159,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20190429_1437.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20190531_1631.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
