--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/company/companyEXT-en.html#main">Company Enrolment - External (Apr 29, 2019, v2.2.1)</a>
+                        <a href="./wet4027/company/companyEXT-en.html#main">Company Enrolment - External (June 6, 2019, v3.0.1)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/transaction/transactionEXT-en.html#main">Regulatory Transaction Template - External (Apr 29, 2019, v2.2.1)</a>
@@ -185,7 +185,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/company/companyINT-en.html#main">Company Enrolment -Internal (Apr 29, 2019, v2.2.1) </a>
+                        <a href="./wet4027/company/companyINT-en.html#main">Company Enrolment -Internal (Jun 06, 2019, v3.0.1) </a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>
@@ -200,7 +200,8 @@
                         <h2>Stylesheet Download Link</h2>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download stylesheet zip file (Feb 07, 2019) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_3_0.zip">Download V3.0 stylesheet zip file (Jun 06, 2019) </a>
                     </div>
                 </div>
 
@@ -227,7 +228,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: April 29, 2019</dt>
+                    <dt>Date modified: June 06, 2019</dt>
                 </dl>
             </div>
         </div>
