--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
                     </div>
                     <div class="row">
                         <a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>
+                    </div>
+                    <div class="row">
                         <a href="./stylesheet/pharmabio_stylesheets_3_0.zip">Download V3.0 stylesheet zip file (Jun 06, 2019) </a>
                     </div>
                 </div>
