PB PI form v3.0.1 deploy to DEV - bug fix

--- a/wet4027/transaction/transactionEXT-fr.html
+++ b/wet4027/transaction/transactionEXT-fr.html
@@ -4,6 +4,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="fr" data-th-lang="#{lang}" dir="ltr">
 <!--<![endif]-->
 <head>
+    <!--No cache-->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="-1"/>
     <meta charset="utf-8" />
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -12,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle de transaction réglementaire: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-05-31">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-06-07">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -115,10 +119,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-05-31",
-            showPostContent: true,
-            showFeedback:true,
-            showShare:true
+            dateModified: "2019-06-07"
         });
     </script>
 </main>
@@ -158,7 +159,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-fr_20190531_1612.min.js"></script>
+<script src="app/scripts/transactionAppEXT-fr_20190607_1120.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
