PB CO and RT form update to DEV - WCAG fixes

--- a/wet4027/transaction/transactionEXT-fr.html
+++ b/wet4027/transaction/transactionEXT-fr.html
@@ -5,10 +5,10 @@
 <!--<![endif]-->
 <head>
     <!--No cache-->
+    <meta charset="utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
-    <meta charset="utf-8" />
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name='description' content="Regulatory Enrolment Process Forms"/>
     <meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/>
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle de transaction réglementaire: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-06-07">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-06-11">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -27,8 +27,8 @@
     <!-- Additional analytics, if required. -->
     <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
     <!-- Load closure template scripts -->
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js" integrity="sha384-32eoaED5PWLqUcm/SmCNYkjyLGbZouGKcA7SqNkg4pw/HO5GQvYe41sFH2Gurff2" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js" integrity="sha384-XdgAwBcyyhJsRyTBhx1UQIgSO/8RlRZMoMQBrHLEKyznnKWPSd+r8VT1ri/ihlri" crossorigin="anonymous"></script>
+    <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js" integrity="sha384-32eoaED5PWLqUcm/SmCNYkjyLGbZouGKcA7SqNkg4pw/HO5GQvYe41sFH2Gurff2" crossorigin="anonymous"></script>
+    <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js" integrity="sha384-XdgAwBcyyhJsRyTBhx1UQIgSO/8RlRZMoMQBrHLEKyznnKWPSd+r8VT1ri/ihlri" crossorigin="anonymous"></script>
     <noscript>
         <!-- Write closure fall-back static file -->
         <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
@@ -119,7 +119,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-06-07"
+            dateModified: "2019-06-11"
         });
     </script>
 </main>
@@ -159,7 +159,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-fr_20190607_1120.min.js"></script>
+<script src="app/scripts/transactionAppEXT-fr_20190611_1144.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
