--- a/wet4027/drugProduct/product.html
+++ b/wet4027/drugProduct/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="fr" data-th-lang="#{lang}" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" data-th-lang="#{lang}" dir="ltr">
 <!--<![endif]-->
 <head>
     <!--No cache-->
@@ -12,23 +12,23 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name='description' content="Regulatory Enrolment Process Forms"/>
     <meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/>
-    <meta name="author" content="Santé Canada"/>
-    <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca">
-    <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
+    <meta name="author" content="Health Canada"/>
+    <meta property="dcterms.title" content="Product Information Template: Regulatory Enrolment Process - Canada.ca">
+    <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-06-13">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-06-28">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
-    <meta property="dcterms.language" title="ISO639-2/T" content="fra">
+    <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
          wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca</title>
+    <title>Product Information Template: Regulatory Enrolment Process - Canada.ca</title>
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <!-- Additional analytics, if required. -->
     <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
     <!-- Load closure template scripts -->
-    <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js" integrity="sha384-32eoaED5PWLqUcm/SmCNYkjyLGbZouGKcA7SqNkg4pw/HO5GQvYe41sFH2Gurff2" crossorigin="anonymous"></script>
-    <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js" integrity="sha384-XdgAwBcyyhJsRyTBhx1UQIgSO/8RlRZMoMQBrHLEKyznnKWPSd+r8VT1ri/ihlri" crossorigin="anonymous"></script>
+    <script src="../wet-boew/js/soyutils.js"></script>
+    <script src="../wet-boew/js/wet-en.js"></script>
     <noscript>
         <!-- Write closure fall-back static file -->
         <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
@@ -52,8 +52,8 @@
 <body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;">
 <div id="def-top">
     <!-- Write closure fall-back static file -->
-    <!-- ./wet_4_0_27/cdts/static/top-fr.html-->
-    <!--# include virtual="/rep-dev/cdts/static/top-fr.html"-->
+    <!-- ./wet_4_0_27/cdts/static/top-en.html-->
+    <!--# include virtual="/rep-dev/cdts/static/top-en.html"-->
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
@@ -62,14 +62,14 @@
         cdnEnv: "prod",
         search: true,
         lngLinks: [{
-            lang: "en",
-            href: "drugProductEXT-en.html",
-            text: "English"
+            lang: "fr",
+            href: "produit.html",
+            text: "Français"
         }],
         showPreContent: false,
-        breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr.html"},
-            {title: "Santé Canada", href: "https://www.canada.ca/fr/sante-canada.html"},
-            {title: "Formulaires pour le Processus d'inscription réglementaire", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}]
+        breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en.html"},
+            {title: "Health Canada", href: "https://www.canada.ca/en/health-canada.html"},
+            {title: "Regulatory Enrolment Process Forms", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
     });
 </script>
 
@@ -78,21 +78,21 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire</h1>
+            <h1 property="name" id="wb-cont">Product Information Template: Regulatory Enrolment Process (REP)</h1>
             <p class="pagetag">
-                <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
+                <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
         </div>
         <div class=" col-md-12 module-table-contents">
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
-                    <h2  class="panel-title">Table de matières</h2>
+                    <h2  class="panel-title">Table of contents</h2>
                 </header>
                 <div class="panel-body">
                     <ul>
-                        <li><a class="ui-link" href="#privacy">Énoncé de confidentialité</a></li>
+                        <li><a class="ui-link" href="#privacy">Privacy Notice Statement</a></li>
                         <li><a class="ui-link" href="#instructions">Instructions</a></li>
-                        <li><a class="ui-link" href="#main">Formulaire</a></li>
+                        <li><a class="ui-link" href="#main">Form</a></li>
                     </ul>
                 </div>
             </section>
@@ -100,19 +100,19 @@
 
     </div>
     <!-- the main content -->
-    <!-- inject:mainContent-->
-    <div id="app-root" data-ng-app="drugProductApp" data-ng-controller="MainController as ctrl">
+        <!-- inject:mainContent-->
+        <div id="app-root" data-ng-app="drugProductApp" data-ng-controller="MainController as ctrl">
     <cmp-drug-product form-type="{{ctrl.formType}}"></cmp-drug-product>
 </div>
 
-    <!-- endinject-->
+        <!-- endinject-->
     <!-- end main content -->
 
     <!--content ends here -->
     <div id="def-preFooter">
         <!-- Write closure fall-back static file -->
-        <!-- ./wet_4_0_27/cdts/static/preFooter-fr.html-->
-        <!--# include virtual="/rep-dev/cdts/static/preFooter-fr.html"-->
+        <!-- ./wet_4_0_27/cdts/static/preFooter-en.html-->
+        <!--# include virtual="/rep-dev/cdts/static/preFooter-en.html"-->
     </div>
 
     <!-- Write closure template -->
@@ -120,14 +120,14 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-06-13"
+            dateModified: "2019-06-28"
         });
     </script>
 </main>
 <div id="def-footer">
     <!-- Write closure fall-back static file -->
-    <!-- ./wet_4_0_27/cdts/static/footer-fr.html-->
-    <!--# include virtual="/rep-dev/cdts/static/footer-fr.html"-->
+    <!-- ./wet_4_0_27/cdts/static/footer-en.html-->
+    <!--# include virtual="/rep-dev/cdts/static/footer-en.html"-->
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
@@ -160,7 +160,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20190613_1330.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20190628_1319.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
