deploy P/B CO, PI and RT forms to DEV with WCAG and meta fix

--- a/wet4027/company/company.html
+++ b/wet4027/company/company.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" manifest="" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
 <head>
     <!--No cache-->
     <meta charset="utf-8" />
-    <!--<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>-->
-    <!--<meta http-equiv="Pragma" content="no-cache"/>-->
-    <!--<meta http-equiv="Expires" content="-1"/>-->
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="-1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='description' content="Regulatory Enrolment Process Forms"/>
     <meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/>
     <meta name="author" content="Health Canada"/>
