--- a/wet4027/transaction/réglementaire-transaction.html
+++ b/wet4027/transaction/réglementaire-transaction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="fr" manifest="" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <!--No cache-->
