--- a/wet4027/company/entreprise.html
+++ b/wet4027/company/entreprise.html
@@ -69,7 +69,7 @@
         showPreContent: false,
         breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr.html"},
             {title: "Santé Canada", href: "https://www.canada.ca/fr/sante-canada.html"},
-            {title: "Formulaires pour le Processus d'inscription réglementaire", href: "https://health-products.canada.ca/rep-pir/index.html"}]
+            {title: "Processus d'inscription réglementaire", href: "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/processus-inscription-reglementaire.html"}]
     });
 </script>
 
