--- a/wet4027/transaction/regulatory-transaction.html
+++ b/wet4027/transaction/regulatory-transaction.html
@@ -88,7 +88,7 @@
         showPreContent: false,
         breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en.html"},
             {title: "Health Canada", href: "https://www.canada.ca/en/health-canada.html"},
-            {title: "Regulatory Enrolment Process Forms", href: "https://health-products.canada.ca/rep-pir/index.html"}]
+            {title: "Regulatory Enrolment Process", href: "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process.html"}]
     });
 </script>
 
