deploy CO form v3.0.4 to Pilot Internal - bug fix

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <a href="./company/companyINT-en.html">Company Enrolment - Internal (effective April 11, 2019 until August 2019) </a>
             </div>
             <div class="row">
-                <a href="./PROD/company/companyINT-en.html">Company Enrolment - Internal (effective August 2019) </a>
+                <a href="./PROD/company/companyINT-en.html">Company Enrolment - Internal (effective August 2019, July 26, 2019) </a>
             </div>
 
             <!--<div class="row">-->
