--- a/PROD/company/companyINT-fr.html
+++ b/PROD/company/companyINT-fr.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle de l'entreprise: Processus d'Inscription Réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-07-24">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-07-25">
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -69,7 +69,7 @@
         showPreContent: false,
         breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr.html"},
             {title: "Santé Canada", href: "https://www.canada.ca/fr/sante-canada.html"},
-            {title: "Formulaires pour le Processus d'inscription réglementaire", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
+            {title: "Processus d'inscription réglementaire", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
     });
 </script>
 
@@ -120,7 +120,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-07-24"
+            dateModified: "2019-07-25"
         });
     </script>
 </main>
@@ -160,7 +160,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppINT-fr_20190724_1037.min.js"></script>
+<script src="app/scripts/companyAppINT-fr_20190725_1441.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
